# bss-direct-inject

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  di-kit.txt  justfile  pyproject.toml
.github/workflows/: ci.yml
scripts/: changelog.py  coverage_summary.py  github_release.py
src/bss_direct_inject/: __init__.py  async_client.py  client.py  protocol.py
tests/: test_async_client.py  test_client_sync.py  test_protocol_builders.py  test_protocol_codec.py
