[project]
authors = [
  {name = "Zac Oler", email = "zac.oler@gmail.com"},
]
dependencies = []
description = "Soundweb London Direct Inject protocol helpers for BSS BLU devices."
name = "bss-direct-inject"
readme = "README.md"
requires-python = ">=3.14"
version = "0.0.0"

[dependency-groups]
dev = [
  "httpx>=0.27.0",
  "pytest-asyncio>=0.23.0",
  "pytest-cov>=5.0.0",
  "pytest>=8.3.0",
  "ruff>=0.6.4",
  "ty>=0.0.8",
]

[build-system]
build-backend = "uv_build"
requires = ["uv_build>=0.9.18,<0.10.0"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.ruff.lint.isort]
combine-as-imports = true
